# symbol

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  ca-tools.toml  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude-plugin/skills/symbol/: SKILL.md
.claude/agents/: Explore.md  Plan.md  general-purpose.md
.claude/skills/ca-tools/: SKILL.md
.claude/skills/symbol/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml
.github/workflows/: ci.yml  release.yml
docs/: read-cache.md  refactoring.md  spec-schema.md  write-architecture.md  write-surface.md
docs/demos/: audit.cast
docs/integrations/: opencode.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/skills/symbol/: SKILL.md
schemas/: symbol.config.schema.json  symbol.rpc.methods.json  symbol.rpc.schema.json  symbol.spec.schema.json
scripts/: check_pkg_thresholds.py  survey.sh
src/ca/symbol/: __init__.py  cli.py
src/ca/symbol/adapters/: __init__.py  python_ast.py  registry.py
src/ca/symbol/caches/: __init__.py  disk.py  in_memory.py  instrument.py  null.py
src/ca/symbol/checkers/: __init__.py  code_structure.py  entrypoints.py  orphans.py  side_effects.py  stack.py  swallowed.py  todos.py  unused_deps.py
src/ca/symbol/commands/: analyze.py  audit.py  callers.py  code.py  delete_symbol.py  hook.py  index.py  init.py  insert_symbol.py  loc.py  map.py  outline.py  patch.py  rename_symbol.py  replace_symbol.py  search.py
src/ca/symbol/mcp/: __init__.py  descriptions.py  server.py
src/ca/symbol/protocols/: __init__.py  language.py
src/ca/symbol/reads/: __init__.py  callers.py  code.py  outline.py  search.py
src/ca/symbol/shared/: analyzer.py  ast_cache.py  checker.py  config_files.py  config_resolver.py  context.py  deps.py  framework_detector.py  graph.py  import_graph.py  pkg_registry.py  project_config.py  registry.py  runner.py  simulator.py  spec.py  symbol.py  symbol_index.py  workspace.py
src/ca/symbol/writes/: _content.py  delete_symbol.py  insert_symbol.py  patch.py  rename_symbol.py  replace_symbol.py  transaction.py
src/ca_tools/: __init__.py  cli.py
src/ca_tools/adapters/: __init__.py  python_ast.py  registry.py
src/ca_tools/analyze/: analyzer.py  cli.py
src/ca_tools/audit/: cli.py  config.py  entrypoints.py  orphans.py  pkg_registry.py  sideeffects.py  stack.py  todos.py  unused_deps.py
src/ca_tools/audit/checkers/: __init__.py  entrypoints.py  side_effects.py  stack.py  swallowed.py  unused_deps.py
src/ca_tools/caches/: __init__.py  disk.py  in_memory.py  instrument.py  null.py
src/ca_tools/checkers/: __init__.py  code_structure.py  orphans.py  side_effects.py  stack.py  todos.py  unused_deps.py
src/ca_tools/commands/: analyze.py  audit.py  callers.py  code.py  delete_symbol.py  hook.py  index.py  init.py  insert_symbol.py  loc.py  map.py  outline.py  patch.py  rename_symbol.py  replace_symbol.py  search.py
src/ca_tools/data/: spec.toml
src/ca_tools/frameworks/: __init__.py  alembic.py  django.py  fastapi.py  pytest.py  python.py
src/ca_tools/init/: cli.py
src/ca_tools/loc/: cli.py  counter.py
src/ca_tools/loc/linguist/: blob.py  language.py  language_stats.py  linguist.py  model.py
src/ca_tools/map/: analyzer.py  cli.py  simulator.py
src/ca_tools/mcp/: __init__.py  descriptions.py  server.py
src/ca_tools/protocols/: __init__.py  language.py  read_cache.py  types.py
src/ca_tools/queries/: __init__.py  callers.py  code.py  outline.py  search.py
src/ca_tools/reads/: callers.py  code.py  outline.py  search.py
src/ca_tools/shared/: analyzer.py  ast_cache.py  checker.py  codestructure_finder.py  config_resolver.py  context.py  deps.py  files.py  findings.py  framework_detector.py  graph.py  import_graph.py  pipeline.py  project_config.py  registry.py  runner.py  sideeffect_finder.py  simulator.py  spec.py  swallowed_finder.py  symbol_index.py  unused_dep_finder.py  workspace.py
src/ca_tools/shared/linguist/: __init__.py  linguist.py
src/ca_tools/writes/: __init__.py  delete_symbol.py  insert_symbol.py  patch.py  rename_symbol.py  replace_symbol.py  transaction.py
src/wyolet/symbol/: __init__.py  cli.py
src/wyolet/symbol/adapters/: __init__.py  _python_ast_rename.py  python_ast.py  python_deps.py  registry.py
src/wyolet/symbol/caches/: __init__.py  disk.py  in_memory.py  instrument.py  null.py
src/wyolet/symbol/checkers/: __init__.py  code_structure.py  entrypoints.py  orphans.py  side_effects.py  stack.py  swallowed.py  todos.py  unused_deps.py
src/wyolet/symbol/commands/: analyze.py  audit.py  callers.py  code.py  delete_symbol.py  hook.py  index.py  init.py  insert_symbol.py  loc.py  map.py  outline.py  patch.py  refresh.py  rename_symbol.py  replace_symbol.py  search.py  undo.py
src/wyolet/symbol/data/: spec.toml
src/wyolet/symbol/mcp/: descriptions.py  server.py
src/wyolet/symbol/protocols/: __init__.py  index_query.py  language.py  read_cache.py  types.py
src/wyolet/symbol/reads/: callers.py  code.py  outline.py  search.py
src/wyolet/symbol/shared/: analyzer.py  ast_cache.py  checker.py  context.py  (+16 more)
tests/: test_adapter_registry.py  test_analyze.py  test_cache_instrument.py  test_codestructure.py  test_config.py  test_config_schema.py  test_custom_checkers.py  test_delete_symbol.py  test_entrypoints.py  test_files.py  test_findings.py  test_go_adapter.py  test_insert_symbol.py  test_linguist.py  test_loc.py  test_map.py  test_mcp_go_integration.py  test_orphans.py  test_patch_apply.py  test_patch_multi.py  test_patch_preflight.py  test_project_config.py  test_read_cache.py  test_registry.py  test_rename_engine_v2.py  test_rename_go_engine.py  test_rename_symbol.py  test_replace_symbol.py  test_rpc_schema.py  test_sideeffects.py  test_simulator.py  test_spec.py  test_spec_schema.py  test_stack.py  test_swallowed.py  test_todos.py  test_transaction.py  test_unused_deps.py  test_writes_blank_lines.py  test_writes_content.py
tests/fixtures/go_project/: user.go
(+286 files in other folders)
