[project]
name = "ca-tools"
version = "0.1.0"
description = "Codebase audit tools — detect stack, entry points, orphan files, and side effects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=7.4.1",
    "msgpack>=1.1.2",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
ca = "ca_tools.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ca_tools"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",   # line too long
    "B008",   # function calls in argument defaults (Typer)
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
warn_return_any = false
disable_error_code = ["import-untyped"]
exclude = ["venv", ".venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
