[project]
name = "wyolet-symbol"
version = "0.1.2"
description = "AST-native code intelligence for Python — MCP server for Claude Code (12 agent tools) + standalone audit CLI (dead code, import graph, swallowed exceptions, 500+ language LOC via Linguist port)."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Abror Aliboyev", email = "abror@aliboyev.com" },
]
keywords = ["ast", "static-analysis", "mcp", "claude-code", "code-intelligence", "cli", "linguist"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "chardet>=7.4.1",
    "mcp>=1.27.0",
    "msgpack>=1.1.2",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
    "zstandard>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/wyolet/symbol"
Repository = "https://github.com/wyolet/symbol"
Issues = "https://github.com/wyolet/symbol/issues"
Changelog = "https://github.com/wyolet/symbol/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "jsonschema>=4.26.0",
]

[project.scripts]
symbol = "wyolet.symbol.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wyolet"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",   # line too long
    "B008",   # function calls in argument defaults (Typer)
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
warn_return_any = false
disable_error_code = ["import-untyped"]
exclude = ["venv", ".venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
